# hexchat

./: .clang-format  .gitignore  .travis.yml  Makefile.am  autogen.sh  common.mk  configure.ac  index.html  params.json  readme.md
plugins/checksum/: Makefile.am  checksum.vcxproj
plugins/doat/: Makefile.am  doat.vcxproj
plugins/exec/: exec.cpp  exec.vcxproj  exec.vcxproj.filters
plugins/fishlim/: Makefile.am  fishlim.vcxproj  plugin_hexchat.c
plugins/mpcinfo/: mpcinfo.vcxproj
plugins/notifications/: notifications.cpp  notifications.def  notifications.vcxproj  notifications.vcxproj.filters
plugins/perl/: Makefile.am  perl.c  perl.cpp  perl.vcxproj  perl.vcxproj.filters
plugins/python/: Makefile.am  python.c  python.cpp  python2.vcxproj  python2.vcxproj.filters  python3.vcxproj  python3.vcxproj.filters
plugins/sysinfo/: Makefile.am  hwmon.cpp  hwmon.hpp  match.cpp  parse.cpp  pci.cpp  pci.h  pci.hpp  sysinfo.cpp  sysinfo.vcxproj  xsys.cpp
plugins/upd/: upd.cpp  upd.vcxproj
plugins/winamp/: winamp.c  winamp.vcxproj
src/: Makefile.am
src/common/: Makefile.am  announce.hpp  base64.cpp  base64.hpp  bitmask_operators.hpp  cfgfiles.cpp  cfgfiles.hpp  chanopt.cpp  chanopt.hpp  charset_helpers.cpp  charset_helpers.hpp  common.vcxproj  common.vcxproj.filters  const_str.hpp  ctcp.cpp  ctcp.hpp  dcc.cpp  dcc.hpp  fe.hpp  filesystem.cpp  filesystem.hpp  glist_iterators.hpp  hexchat-plugin.h  hexchat.cpp  hexchat.hpp  hexchatc.hpp  history.cpp  history.hpp  identd.cpp  identd.hpp  ignore.cpp  ignore.hpp  inbound.cpp  inbound.h  inbound.hpp  inet.hpp  make-te.cpp  make-te.vcxproj  make-te.vcxproj.filters  modes.cpp  (+56 more)
src/common/dbus/: Makefile.am  dbus-client.cpp  dbus-client.h  dbus-plugin.c  dbus-plugin.h
src/fe-gtk/: COMAssist.hpp  Makefile.am  ascii.cpp  banlist.cpp  banlist.hpp  chanlist.cpp  chanlist.hpp  chanview.cpp  chanview.hpp  cpp.hint  custom-list.cpp  custom-list.hpp  dccgui.cpp  editlist.cpp  editlist.h  editlist.hpp  fe-gtk.cpp  fe-gtk.hpp  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.cpp  fkeys.hpp  gtk3bridge.cpp  gtk3bridge.hpp  gtk_helpers.hpp  gtkutil.cpp  gtkutil.h  gtkutil.hpp  hexchat.exe.manifest  ignoregui.cpp  joind.cpp  joind.hpp  main.cpp  maingui.cpp  maingui.hpp  menu.cpp  menu.hpp  notifygui.cpp  palette.cpp  palette.hpp  (+27 more)
src/fe-text/: Makefile.am  fe-text.cpp  fe-text.vcxproj  fe-text.vcxproj.filters
src/libirc/: Makefile.am  config.hpp  connection.hpp  connection_fwd.hpp  irc_client.cpp  irc_client.hpp  irc_ctype.cpp  irc_ctype.hpp  irc_proto.cpp  irc_proto.hpp  libirc.vcxproj  libirc.vcxproj.filters  message.cpp  message.hpp  message_fwd.hpp  packages.config  server.cpp  server.hpp  split.cpp  split.hpp  sutter.hpp  tcp_connection.cpp  tcp_connection.hpp  tcpfwd.hpp  throttled_connection.cpp  throttled_connection.hpp  throttled_queue.cpp  throttled_queue.hpp  w32crypt_seed.cpp  w32crypt_seed.hpp  win_tls_stream.cpp  win_tls_stream.hpp
src/libirc/detail/: connection_detail.hpp  inbound.cpp  inbound.hpp
test/: Makefile.am
test/commontest/: Makefile.am  commontest.vcxproj  commontest.vcxproj.filters  fe_stub.cpp  plugintest.cpp  util_test.cpp
test/libirctest/: Makefile.am  irc_proto_test.cpp  libirctest.vcxproj  libirctest.vcxproj.filters  message_test.cpp
win32/: hexchat.props  hexchat.sln  manifest.xml
win32/copy/: copy.vcxproj  copy.vcxproj.filters
win32/installer/: hexchat.iss.tt  installer.vcxproj  installer.vcxproj.filters
win32/nls/: nls.vcxproj
