## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = po src plugins data test

EXTRA_DIST = autogen.sh data

AM_CFLAGS = -Wall -Wextra -pedantic -Werror -std=c1x -D_FORTIFY_SOURCE=2
AM_CPPFLAGS = -Wall -Wextra -pedantic -Werror -std=c++0x -D_FORTIFY_SOURCE=2
