localedir = $(datadir)/locale

bin_PROGRAMS = hexchat-text

AM_CPPFLAGS = $(COMMON_CFLAGS) -DLOCALEDIR=\"$(localedir)\" $(BOOST_CPPFLAGS) $(CPPFLAGS) -std=c++0x -Wall -Wextra -pedantic -D_FORTIFY_SOURCE=2

hexchat_text_LDADD = ../common/libhexchatcommon.a ../libirc/libirc.a $(COMMON_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_IOSTREAMS_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_ASIO_LIBS) $(BOOST_SIGNALS2_LIBS) $(BOOST_REGEX_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_CHRONO_LIBS)
hexchat_text_SOURCES = fe-text.cpp fe-text.h
hexchat_text_LDFLAGS = -­z relro $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_IOSTREAMS_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_ASIO_LDFLAGS) $(BOOST_SIGNALS2_LDFLAGS) $(BOOST_THREAD_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_CHRONO_LDFLAGS)
hexchat_text_CPPFLAGS = $(AM_CPPFLAGS) -I$(top_builddir)/src/common -I$(top_builddir)/src/libirc
hexchat_text_LIBS = $(BOOST_FILESYSTEM_LIBS) $(BOOST_IOSTREAMS_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_ASIO_LIBS) $(BOOST_SIGNALS2_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_REGEX_LIBS) $(BOOST_CHRONO_LIBS)
